--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@netlify-builder/deploy": "^2.0.3",
     "@types/faker": "^4.1.6",
+    "angular-cli-ghpages": "^0.6.0",
     "bootstrap": "^4.3.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
